--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "digest-fetch": "^3.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.344.0",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "node-fetch": "^3.3.2",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
